# makelist

./: .gitignore  CMakeLists.txt  condition_from_args.cpp  condition_from_args.h  main.cpp  readme.md  scan_dir.cpp  scan_dir.h
test/: run-test.py
test/example/: Список.txt
